# advertisement-mcp

./: .claudeignore  .gitignore  AdServer.py  affiliate_mcp_server.py  hello.py  load_affiliate_db.py  pyproject.toml  test_mcp_server.py  test_relationship_coach.py  test_search.py
data/: affiliate_links.csv
examples/: blog_affiliate_enhancer.py  relationship_coach.py  relationship_coach_mcp.py
